// Copyright 2017 Istio Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package istio.v1.auth;

import "gogoproto/gogo.proto";

option go_package="istio_v1_auth";
option (gogoproto.goproto_getters_all) = false;
option (gogoproto.equal_all) = false;
option (gogoproto.gostring_all) = false;

// Certificate request message.
message IstioCertificateRequest {
  // PEM-encoded certificate request.
  string csr = 1;
  // Optional subject ID field.
  string subject_id = 2;
  // Optional: requested certificate validity period, in seconds.
  int64 validity_duration = 3;
}

// Certificate response message.
message IstioCertificateResponse {
  // PEM-encoded certificate chain.
  // Leaf cert is element '0'. Root cert is element 'n'.
  repeated string cert_chain = 1;
}

// Service for managing certificates issued by the Istio CA.
service IstioCertificateService {
  // Using provided CSR, returns a signed certificate.
  rpc CreateCertificate(IstioCertificateRequest)
      returns (IstioCertificateResponse) {
  }
}
